本地服务器运行正常

--- a/pipemonitor/Web.config
+++ b/pipemonitor/Web.config
@@ -8,10 +8,10 @@
 <configuration>
   <connectionStrings>
     
-    <add name="mysql1" connectionString="Server=localhost;uid=root;pwd=weipai;database=dbvpipe_text;pooling=false;charset=utf8" />
+    <!--<add name="mysql1" connectionString="Server=localhost;uid=root;pwd=weipai;database=dbvpipe_text;pooling=false;charset=utf8" />-->
 
 
-    <!--<add name="mysql1" connectionString="Server=localhost;uid=root;pwd=123456;database=dbvpipe;pooling=false;charset=utf8"/>-->
+    <add name="mysql1" connectionString="Server=localhost;uid=root;pwd=123456;database=dbvpipe;pooling=false;charset=utf8"/>
     
   </connectionStrings>
 
